Fixing alignment issues on carousel

--- a/sass/custom-sc/_home.scss
+++ b/sass/custom-sc/_home.scss
@@ -252,6 +252,10 @@
   
 }
 
+p.slider-controls{
+  margin: 0;
+}
+
 #facilitation div{
   background: url(../images/scroller-facilitation-bg.png) right top no-repeat;
 }
