--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,8 +3,11 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
+@import "compass";
 @import "compass/reset";
 @import "compass/css3/images";
+
+@import "susy";
 
 @import "mixins/mixins";
 
@@ -22,6 +25,11 @@
 @import "partials/buttons";
 @import "partials/sprites";
 
+
+$total-columns  : 16;             // a 12-column grid
+$column-width   : 4em;            // each column is 4em wide
+$gutter-width   : 1em;            // 1em gutters between columns
+$grid-padding   : $gutter-width;  // grid-padding equal to gutters
 
 @import "custom-sc/search";
 @import "custom-sc/home";
